feat: add code quality improvements (#64) (#65)
- Add checkstyle gradle plugin, checkstyle config.
- Fix code issues related to the errors from checkstyle.
- Add Lombok library for code generation and reducing boilerplate.
- Improve trace builders via Lombok.

Co-authored-by: Tsvetan Dimitrov <tsvetan.dimitrov@theopentag.com>
Co-authored-by: Tsvetan Dimitrov <tsvetan.dimitrov@ft.com>